refactor: setter 대신 빌더 패턴 사용