@@ -4,7 +4,6 @@ import com.programmers.jpa.domain.order.*;
 import com.programmers.jpa.order.dto.*;
 import org.springframework.stereotype.Component;
 
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -12,66 +11,59 @@ import java.util.stream.Collectors;
 public class OrderConverter {
     // dto -> entity
     public Order convertOrder(OrderDto orderDto) {
-        Order order = new Order();
-        order.setUuid(orderDto.getUuid());
-        order.setMemo(orderDto.getMemo());
-        order.setOrderStatus(orderDto.getOrderStatus());
-        order.setOrderDatetime(LocalDateTime.now());
-        order.setCratedAt(LocalDateTime.now());
-        order.setCreatedBy(orderDto.getMemberDto().getName());
+        List<OrderItem> orderItems = this.convertOrderItems(orderDto.getOrderItemDtos());
 
-        order.setMember(this.convertMember(orderDto.getMemberDto()));
-        this.convertOrderItems(orderDto).forEach(order::addOrderItem);
-
-        return order;
+        return Order.builder()
+                .orderStatus(orderDto.getOrderStatus())
+                .memo(orderDto.getMemo())
+                .member(this.convertMember(orderDto.getMemberDto()))
+                .orderItems(orderItems)
+                .build();
     }
 
     private Member convertMember(MemberDto memberDto) {
-        Member member = new Member();
-        member.setName(memberDto.getName());
-        member.setNickName(memberDto.getNickName());
-        member.setAge(memberDto.getAge());
-        member.setAddress(memberDto.getAddress());
-        member.setDescription(memberDto.getDescription());
-        return member;
+        return Member.builder()
+                .name(memberDto.getName())
+                .nickName(memberDto.getNickName())
+                .age(memberDto.getAge())
+                .address(memberDto.getAddress())
+                .description(memberDto.getDescription())
+                .build();
     }
 
-    private List<OrderItem> convertOrderItems(OrderDto orderDto) {
-        return orderDto.getOrderItemDtos().stream()
-                .map(orderItemDto -> {
-                    OrderItem orderItem = new OrderItem();
-                    orderItem.setPrice(orderItemDto.getPrice());
-                    orderItem.setQuantity(orderItemDto.getQuantity());
-                    orderItem.setItem(orderItem.getItem());
-                    return orderItem;
-                })
-                .collect(Collectors.toList());
+    private List<OrderItem> convertOrderItems(List<OrderItemDto> orderItemDtos) {
+        return orderItemDtos.stream()
+                .map(orderItemDto -> OrderItem.builder()
+                        .price(orderItemDto.getPrice())
+                        .quantity(orderItemDto.getQuantity())
+                        .build())
+                .toList();
     }
 
     private Item convertItem(ItemDto itemDto) {
         if (ItemType.FOOD.equals(itemDto.getType())) {
-            Food food = new Food();
-            food.setPrice(itemDto.getPrice());
-            food.setStockQuantity(itemDto.getStockQuantity());
-            food.setChef(itemDto.getChef());
-            return food;
+            return Food.builder()
+                    .price(itemDto.getPrice())
+                    .stockQuantity(itemDto.getStockQuantity())
+                    .chef(itemDto.getChef())
+                    .build();
         }
 
         if (ItemType.FURNITURE.equals(itemDto.getType())) {
-            Furniture furniture = new Furniture();
-            furniture.setPrice(itemDto.getPrice());
-            furniture.setStockQuantity(itemDto.getStockQuantity());
-            furniture.setHeight(itemDto.getHeight());
-            furniture.setWidth(itemDto.getWidth());
-            return furniture;
+            return Furniture.builder()
+                    .price(itemDto.getPrice())
+                    .stockQuantity(itemDto.getStockQuantity())
+                    .width(itemDto.getWidth())
+                    .height(itemDto.getHeight())
+                    .build();
         }
 
         if (ItemType.CAR.equals(itemDto.getType())) {
-            Car car = new Car();
-            car.setPrice(itemDto.getPrice());
-            car.setStockQuantity(itemDto.getStockQuantity());
-            car.setPower(itemDto.getPower());
-            return car;
+            return Car.builder()
+                    .price(itemDto.getPrice())
+                    .stockQuantity(itemDto.getStockQuantity())
+                    .power(itemDto.getPower())
+                    .build();
         }
 
         throw new IllegalArgumentException("잘못된 아이템 타입 입니다.");
